deleted the file with the wrong extension

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
+<!DOCTYPE html>
 <html>
+<head> <title>ruvachipoyera</title></head>
+<body>
+    <h1>Rufaro's Blog</h1>
+    <h2>Hi, I'm Rufaro and welcome to my blog!</h2>
+    <h3>Get to know me:</h3>    
+    <p>21 year old BSc Computer Science Student. <br>Born and bred in Harare, Zimbabwe <br> Studying at the <a href = "https://www.uwc.ac.za/">University of the Western Cape</a>, Cape Town </p>
 
-<head>
-    <title>
-        Ruvaaa
-    </title>
-</head>
-<body> <h1> Hi this is me!! </h1>
-    
+    <a href="posts.html"
+
+
 
 </body>
-
 </html>
