--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h3>Get to know me:</h3>    
     <p>21 year old BSc Computer Science Student. <br>Born and bred in Harare, Zimbabwe <br> Studying at the <a href = "https://www.uwc.ac.za/">University of the Western Cape</a>, Cape Town </p>
 
-    <a href="posts.html"
+    <a href="posts.html"><h2>POSTS</h2></a>
 
 
 
