--- a/aboutme.html
+++ b/aboutme.html
@@ -2,9 +2,6 @@
 <html>
     <head><title>About Me</title></head>
     <body>
-        <h1>Get to know me:</h1>    
-        <p>Hi there! My name is Rufaro, and I'm from Zimbabwe. I am currently pursuing a BSc Computer Science degree at <a href = "https://www.uwc.ac.za/">University of the Western Cape</a>, Cape Town and a dream of pioneering and revolutionising tech solutions to underserved communities. 
-        <br>I'd describe myself as passionate, witty and a little bit of a dreamer. A random fact about me? I am a jack of all trades but unfortunately a master of none. </p>
-        <p>In my free time, I love to watch series and brainstorm new ideas. Recently, I've been getting more into web development and I am excited to learn more stuff as time moves.</p>
+        <p>This is my first post 🎀😁</p>
     </body>
 </html>
