--- a/firstyear.html
+++ b/firstyear.html
@@ -5,7 +5,23 @@
         <h1>This is how my 2024 went</h1>
         <p>15 November 2024</p>
         <h4>Python</h4>
-        <p></p>
+        <p>Learning Python felt refreshing after my experience with Visual Basic. I already knew the basics of programming, but Python felt like a simpler, more elegant way to write code. It wasn't just about syntax—it made problem-solving <br>
+            feel smoother, like taking a deep breath after a tough day. When I started exploring NumPy for data analytics, it all clicked. Python wasn't just a language; it was a tool that made me realize how much I love finding patterns and <br>
+            making sense of data. It opened doors to an area I now see myself diving deeper into.</p>
+
+        <h4>Java</h4>
+        <p>Java was a bit of a challenge at first. Coming from Visual Basic and Python, Java's syntax felt more rigid. But as I stuck with it, I started to understand its structure and why it's so widely used. The rules made sense as they pushed <br>
+            me to think more about the long-term stability of my code. It wasn't just about getting something to work—it was about making sure it worked well. I started to see the appeal for larger projects and systems. It might not have been love <br>
+            at first sight, but it's definitely earned my respect. When all is said and done I will pick Java over Python anyday, we have become best buddies and I can see us in a long term relationship</p>
+         <img src = "java meme.png" width="200" height="350">
+
+        <h4>HTML & CSS</h4>
+        <p>HTML was my introduction to the web, and it was a straightforward but essential lesson. At first, it seemed too simple, like I wasn't really coding, but building the skeleton of a website. But the more I worked with it, the more I realized <br>
+             how important that structure is. It was like learning the foundation of a house—it's not glamorous, but nothing works without it. Every time I added a new element to a page and saw it come together, I understood how all the layers fit into a larger picture.
+
+            CSS is where the design magic happened. After learning HTML, CSS felt like the brush strokes that brought a website to life. At first, I found it a bit tricky, especially with things like positioning and alignment. But once I got the hang of it, it<br>
+             felt satisfying to see my pages not just work, but actually look good. With CSS, it wasn't just about getting elements on a screen—it was about making those elements feel right. It's where I learned the value of aesthetics in a digital world.</p>
+
         <h4>First Year</h4>
         <p>So I started my first year in Computer Science this year. I initiaklly did not even want to do Computer Science if I am going to be honest, I wanted something to do with Math so my main goal was to transfer to that in second year.<br>
              Turns out Computer Science is just another glorified Math degree so I actually started to enjoy so much I forgot to apply for a transfer. Rating all my modules, I give MAT105 a 10/10 I absolutely enjoyed Calculus but Linear Algebra <br>
@@ -15,9 +31,13 @@
         
         <h4>Moving To Capetown</h4>
         <p>I moved to Capetown for uni. Was it planned? No, but it has been an experience. I struggled to adjust to the weather at first because summer gets really hot so I had constant headaches and why is the sun on full blast at like 7 a.m? I had constant jumpscares thinking I was late for school <br> 
-        cause of the light and heat but it will literally be 7 a.m. Winter was not any better. I did not know it rained in winter till I was already here and I am not a winter person let alone a wet winter? However, it really is a beautiful city and I would not mind staying here inspite of the ridiculous cost of living. </p>
+        cause of the light and heat but it will literally be 7 a.m. Winter was not any better. I did not know it rained in winter till I was already here and I am not a winter person let alone a wet winter? However, it really is a beautiful city and I would not mind staying here permanently. </p>
 
+        <h4>Graphics Designing</h4>
+        <p>I have been meaning to get in touch with my artsy side for a while now but school and other committments kept getting in the way (pure laziness honestly).It was till I realised that hobbies are what make a person and gives you personality and if someone were to ask me to tell them about myself, I would have nothung<br>
+        If I were a dish, I would probably be a plain vegetable soup but it's time to change that! I have combined the two things I love, computers and graphics and have started with designing. I am hoping to make money out of it soon though lol, like those people who "accidentally" make money from their hobbies and stuff. </p>
 
+        <p>Well this is it! Hope you had fun reading thiss</p>
 
 
     </body>
