final work for the day

--- a/firstyear.html
+++ b/firstyear.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head><title>stuffididin2024</title></head>
-    <body>
+    <body style = "background-color: aquamarine;" >
         <h1>This is how my 2024 went</h1>
         <p>15 November 2024</p>
         <h4>Python</h4>
