--- a/posts.html
+++ b/posts.html
@@ -3,9 +3,13 @@
 <head><title>posts</title></head>
 <body>
     <h2>This is basically me yapping about different aspects of my life 🎀</h2>
+    <a href="2025stuff.html">Things I want to do in 2025 </a>
+    <hr>
     <a href="firstyear.html">Things I did in 2024 😊</a>
-    <br>
+    <hr>
     <a href="aboutme.html"> Hey there </a>
+    <hr>
+    
 
 </body>
 </html>
