--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,7 @@
 <html>
     <head><title>About Me</title></head>
     <body>
-        <p>This is my first post 🎀😁</p>
+        <p>Hi. This is the first design of my page using GitHub pages.This is my first post 🎀😁</p>
+        <img src ="quby.gif" alt="dancing gif">
     </body>
 </html>
